--- a/momapy/demo/demo.ipynb
+++ b/momapy/demo/demo.ipynb
@@ -120,10 +120,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30m<class 'momapy.sbgn.pd.SBGNPDMap'>\u001b[31m: SBGNPDMap(id=UUID('e37c99f7-e0...\u001b[0m\n",
-      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31me37c99f7-e0d8-4321-9e52-c2ca28...\u001b[0m\n",
-      "  \u001b[34m* model\u001b[35m: <class 'momapy.sbgn.pd.SBGNPDModel'> = \u001b[31mSBGNPDModel(id=UUID('0cd738d6-...\u001b[0m\n",
-      "  \u001b[34m* layout\u001b[35m: <class 'momapy.sbgn.pd.SBGNPDLayout'> = \u001b[31mSBGNPDLayout(id=UUID('4d50d9ad...\u001b[0m\n",
+      "\u001b[30m<class 'momapy.sbgn.pd.SBGNPDMap'>\u001b[31m: SBGNPDMap(id=UUID('75d377c8-77...\u001b[0m\n",
+      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31m75d377c8-7768-4fbb-a75b-dbb775...\u001b[0m\n",
+      "  \u001b[34m* model\u001b[35m: <class 'momapy.sbgn.pd.SBGNPDModel'> = \u001b[31mSBGNPDModel(id=UUID('8e997455-...\u001b[0m\n",
+      "  \u001b[34m* layout\u001b[35m: <class 'momapy.sbgn.pd.SBGNPDLayout'> = \u001b[31mSBGNPDLayout(id=UUID('d0a092c4...\u001b[0m\n",
       "  \u001b[34m* layout_model_mapping\u001b[35m: <class 'momapy.core.LayoutModelMapping'> = \u001b[31mLayoutModelMapping(_singleton_...\u001b[0m\n",
       "  \u001b[34m* notes\u001b[35m: str | None = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* annotations\u001b[35m: frozenset[momapy.sbgn.core.Annotation] = \u001b[31mfrozenset()\u001b[0m\n"
@@ -163,8 +163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30m<class 'momapy.sbgn.pd.SBGNPDModel'>\u001b[31m: SBGNPDModel(id=UUID('0cd738d6-...\u001b[0m\n",
-      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31m0cd738d6-b636-49c9-95e6-f471ce...\u001b[0m\n",
+      "\u001b[30m<class 'momapy.sbgn.pd.SBGNPDModel'>\u001b[31m: SBGNPDModel(id=UUID('8e997455-...\u001b[0m\n",
+      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31m8e997455-8340-4347-9a26-8b04b1...\u001b[0m\n",
       "  \u001b[34m* notes\u001b[35m: str | None = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* annotations\u001b[35m: frozenset[momapy.sbgn.core.Annotation] = \u001b[31mfrozenset()\u001b[0m\n",
       "  \u001b[34m* entity_pools\u001b[35m: frozenset[momapy.sbgn.pd.EntityPool] = \u001b[31mfrozenset({Macromolecule(id='g...\u001b[0m\n",
@@ -203,13 +203,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30m<class 'momapy.sbgn.pd.Macromolecule'>\u001b[31m: Macromolecule(id='glyph1', not...\u001b[0m\n",
-      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31mglyph1\u001b[0m\n",
+      "\u001b[30m<class 'momapy.sbgn.pd.Macromolecule'>\u001b[31m: Macromolecule(id='glyph3', not...\u001b[0m\n",
+      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31mglyph3\u001b[0m\n",
       "  \u001b[34m* notes\u001b[35m: str | None = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* annotations\u001b[35m: frozenset[momapy.sbgn.core.Annotation] = \u001b[31mfrozenset()\u001b[0m\n",
       "  \u001b[34m* compartment\u001b[35m: typing.Optional[momapy.sbgn.pd.Compartment] = \u001b[31mNone\u001b[0m\n",
-      "  \u001b[34m* label\u001b[35m: typing.Optional[str] = \u001b[31mA\u001b[0m\n",
-      "  \u001b[34m* state_variables\u001b[35m: frozenset[momapy.sbgn.pd.StateVariable] = \u001b[31mfrozenset({StateVariable(id='g...\u001b[0m\n",
+      "  \u001b[34m* label\u001b[35m: typing.Optional[str] = \u001b[31mB\u001b[0m\n",
+      "  \u001b[34m* state_variables\u001b[35m: frozenset[momapy.sbgn.pd.StateVariable] = \u001b[31mfrozenset()\u001b[0m\n",
       "  \u001b[34m* units_of_information\u001b[35m: frozenset[momapy.sbgn.pd.UnitOfInformation] = \u001b[31mfrozenset()\u001b[0m\n"
      ]
     }
@@ -270,8 +270,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30m<class 'momapy.sbgn.pd.SBGNPDLayout'>\u001b[31m: SBGNPDLayout(id=UUID('4d50d9ad...\u001b[0m\n",
-      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31m4d50d9ad-60b0-4c11-b5bf-6b2dd4...\u001b[0m\n",
+      "\u001b[30m<class 'momapy.sbgn.pd.SBGNPDLayout'>\u001b[31m: SBGNPDLayout(id=UUID('d0a092c4...\u001b[0m\n",
+      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31md0a092c4-2320-414c-9ac7-ebdd14...\u001b[0m\n",
       "  \u001b[34m* layout_elements\u001b[35m: tuple[momapy.core.LayoutElement] = \u001b[31m(MacromoleculeLayout(id='glyph...\u001b[0m\n",
       "  \u001b[34m* stroke\u001b[35m: momapy.drawing.NoneValueType | momapy.coloring.Color | None = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* stroke_width\u001b[35m: float | None = \u001b[31mNone\u001b[0m\n",
@@ -365,7 +365,7 @@
       "  \u001b[34m* position\u001b[35m: <class 'momapy.geometry.Point'> = \u001b[31mPoint(x=85.0, y=270.0)\u001b[0m\n",
       "  \u001b[34m* width\u001b[35m: <class 'float'> = \u001b[31m108.0\u001b[0m\n",
       "  \u001b[34m* height\u001b[35m: <class 'float'> = \u001b[31m60.0\u001b[0m\n",
-      "  \u001b[34m* label\u001b[35m: momapy.core.TextLayout | None = \u001b[31mTextLayout(id=UUID('463e129f-7...\u001b[0m\n",
+      "  \u001b[34m* label\u001b[35m: momapy.core.TextLayout | None = \u001b[31mTextLayout(id=UUID('fa789c95-8...\u001b[0m\n",
       "  \u001b[34m* border_stroke\u001b[35m: momapy.drawing.NoneValueType | momapy.coloring.Color | None = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* border_stroke_width\u001b[35m: float | None = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* border_stroke_dasharray\u001b[35m: momapy.drawing.NoneValueType | tuple[float] | None = \u001b[31mNone\u001b[0m\n",
@@ -867,7 +867,7 @@
       "  \u001b[34m* position\u001b[35m: typing.Optional[abc.PointBuilder] = \u001b[31mPointBuilder(x=85.0, y=270.0)\u001b[0m\n",
       "  \u001b[34m* width\u001b[35m: <class 'float'> = \u001b[31m108.0\u001b[0m\n",
       "  \u001b[34m* height\u001b[35m: <class 'float'> = \u001b[31m60.0\u001b[0m\n",
-      "  \u001b[34m* label\u001b[35m: typing.Optional[abc.TextLayoutBuilder] = \u001b[31mTextLayoutBuilder(id=UUID('d14...\u001b[0m\n",
+      "  \u001b[34m* label\u001b[35m: typing.Optional[abc.TextLayoutBuilder] = \u001b[31mTextLayoutBuilder(id=UUID('994...\u001b[0m\n",
       "  \u001b[34m* border_stroke\u001b[35m: typing.Union[momapy.drawing.NoneValueType, abc.ColorBuilder, NoneType] = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* border_stroke_width\u001b[35m: typing.Optional[float] = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* border_stroke_dasharray\u001b[35m: typing.Union[momapy.drawing.NoneValueType, momapy.core.TupleBuilder[float], NoneType] = \u001b[31mNone\u001b[0m\n",
@@ -956,10 +956,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[30m<class 'abc.SBGNPDMapBuilder'>\u001b[31m: SBGNPDMapBuilder(id=UUID('1e31...\u001b[0m\n",
-      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31m1e315bd7-d704-4dd9-ac44-f19e52...\u001b[0m\n",
-      "  \u001b[34m* model\u001b[35m: typing.Optional[abc.SBGNPDModelBuilder] = \u001b[31mSBGNPDModelBuilder(id=UUID('cf...\u001b[0m\n",
-      "  \u001b[34m* layout\u001b[35m: typing.Optional[abc.SBGNPDLayoutBuilder] = \u001b[31mSBGNPDLayoutBuilder(id=UUID('9...\u001b[0m\n",
+      "\u001b[30m<class 'abc.SBGNPDMapBuilder'>\u001b[31m: SBGNPDMapBuilder(id=UUID('ad64...\u001b[0m\n",
+      "  \u001b[34m* id\u001b[35m: <class 'str'> = \u001b[31mad64fb2d-f4d0-4d6d-b8f5-592f73...\u001b[0m\n",
+      "  \u001b[34m* model\u001b[35m: typing.Optional[abc.SBGNPDModelBuilder] = \u001b[31mSBGNPDModelBuilder(id=UUID('3a...\u001b[0m\n",
+      "  \u001b[34m* layout\u001b[35m: typing.Optional[abc.SBGNPDLayoutBuilder] = \u001b[31mSBGNPDLayoutBuilder(id=UUID('f...\u001b[0m\n",
       "  \u001b[34m* layout_model_mapping\u001b[35m: typing.Optional[momapy.core.LayoutModelMappingBuilder] = \u001b[31mLayoutModelMappingBuilder(_sin...\u001b[0m\n",
       "  \u001b[34m* notes\u001b[35m: typing.Optional[str] = \u001b[31mNone\u001b[0m\n",
       "  \u001b[34m* annotations\u001b[35m: momapy.core.FrozensetBuilder[abc.AnnotationBuilder] = \u001b[31mFrozensetBuilder()\u001b[0m\n"
@@ -1313,7 +1313,7 @@
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "<class 'abc.ConsumptionLayoutBuilder'> object has no attribute 'shorten'",
+     "evalue": "<class 'abc.ProductionLayoutBuilder'> object has no attribute 'width'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -1323,7 +1323,7 @@
       "File \u001b[0;32m~/code/momapy/momapy/styling.py:146\u001b[0m, in \u001b[0;36mapply_style_sheet\u001b[0;34m(layout_element, style_sheet, strict, ancestors)\u001b[0m\n\u001b[1;32m    144\u001b[0m ancestors \u001b[38;5;241m=\u001b[39m ancestors \u001b[38;5;241m+\u001b[39m [layout_element]\n\u001b[1;32m    145\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m child \u001b[38;5;129;01min\u001b[39;00m layout_element\u001b[38;5;241m.\u001b[39mchildren():\n\u001b[0;32m--> 146\u001b[0m     \u001b[43mapply_style_sheet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchild\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstyle_sheet\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mancestors\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/code/momapy/momapy/styling.py:143\u001b[0m, in \u001b[0;36mapply_style_sheet\u001b[0;34m(layout_element, style_sheet, strict, ancestors)\u001b[0m\n\u001b[1;32m    141\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m selector, style_collection \u001b[38;5;129;01min\u001b[39;00m style_sheet\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m    142\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m selector\u001b[38;5;241m.\u001b[39mselect(layout_element, ancestors):\n\u001b[0;32m--> 143\u001b[0m         \u001b[43mapply_style_collection\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlayout_element\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstyle_collection\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstrict\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    144\u001b[0m ancestors \u001b[38;5;241m=\u001b[39m ancestors \u001b[38;5;241m+\u001b[39m [layout_element]\n\u001b[1;32m    145\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m child \u001b[38;5;129;01min\u001b[39;00m layout_element\u001b[38;5;241m.\u001b[39mchildren():\n",
       "File \u001b[0;32m~/code/momapy/momapy/styling.py:129\u001b[0m, in \u001b[0;36mapply_style_collection\u001b[0;34m(layout_element, style_collection, strict)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m strict:\n\u001b[0;32m--> 129\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m    130\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(layout_element)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m object has no \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    131\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mattribute \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mattribute\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    132\u001b[0m         )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: <class 'abc.ConsumptionLayoutBuilder'> object has no attribute 'shorten'"
+      "\u001b[0;31mAttributeError\u001b[0m: <class 'abc.ProductionLayoutBuilder'> object has no attribute 'width'"
      ]
     }
    ],
