--- a/demo/demo.ipynb
+++ b/demo/demo.ipynb
@@ -65,7 +65,7 @@
    "id": "2738f562",
    "metadata": {},
    "source": [
-    "# The `Map` object"
+    "## The `Map` object"
    ]
   },
   {
@@ -480,7 +480,7 @@
    "id": "c034e17c",
    "metadata": {},
    "source": [
-    "# Equality and-sub relation for `Map`s, `Model`s, `Layout`s and `LayoutModelMapping`s"
+    "## Equality and-sub relation for `Map`s, `Model`s, `Layout`s and `LayoutModelMapping`s"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "id": "8271dfaa",
    "metadata": {},
    "source": [
-    "## Equality"
+    "### Equality"
    ]
   },
   {
@@ -507,7 +507,7 @@
    "id": "48ceb8ab",
    "metadata": {},
    "source": [
-    "### Definition"
+    "#### Definition"
    ]
   },
   {
@@ -526,7 +526,7 @@
    "id": "8a6ede69",
    "metadata": {},
    "source": [
-    "### Example"
+    "#### Example"
    ]
   },
   {
@@ -602,7 +602,7 @@
    "id": "0d37a254",
    "metadata": {},
    "source": [
-    "## Sub-map/model/layout/mapping"
+    "### Sub-map/model/layout/mapping"
    ]
   },
   {
@@ -610,7 +610,7 @@
    "id": "bd06325a",
    "metadata": {},
    "source": [
-    "### Definition"
+    "#### Definition"
    ]
   },
   {
@@ -629,7 +629,7 @@
    "id": "6590e038",
    "metadata": {},
    "source": [
-    "### Example 1"
+    "#### Example 1"
    ]
   },
   {
@@ -706,7 +706,7 @@
    "id": "90579fed",
    "metadata": {},
    "source": [
-    "### Example 2"
+    "#### Example 2"
    ]
   },
   {
@@ -761,7 +761,7 @@
    "id": "5d92c9d6",
    "metadata": {},
    "source": [
-    "# Frozen and builder objects"
+    "## Frozen and builder objects"
    ]
   },
   {
@@ -957,7 +957,7 @@
    "id": "94a41116",
    "metadata": {},
    "source": [
-    "# Reading and writing"
+    "## Reading and writing"
    ]
   },
   {
@@ -985,7 +985,7 @@
    "id": "c2ebfdd7-3eb8-430c-a6f3-1af388029eee",
    "metadata": {},
    "source": [
-    "# Rendering"
+    "## Rendering"
    ]
   },
   {
@@ -1093,7 +1093,7 @@
    "id": "1b1deff3",
    "metadata": {},
    "source": [
-    "# Styling"
+    "## Styling"
    ]
   },
   {
@@ -1101,7 +1101,7 @@
    "id": "7ed6ea84",
    "metadata": {},
    "source": [
-    "## Styling `LayoutElement` objects"
+    "### Styling `LayoutElement` objects"
    ]
   },
   {
@@ -1109,7 +1109,7 @@
    "id": "2ed1ea2b",
    "metadata": {},
    "source": [
-    "### Basic styling"
+    "#### Basic styling"
    ]
   },
   {
@@ -1329,7 +1329,7 @@
    "id": "4bf56189",
    "metadata": {},
    "source": [
-    "### Advanced styling"
+    "#### Advanced styling"
    ]
   },
   {
@@ -1370,7 +1370,7 @@
    "id": "84aea5ab",
    "metadata": {},
    "source": [
-    "## CSS-like style sheets"
+    "### CSS-like style sheets"
    ]
   },
   {
@@ -1649,7 +1649,7 @@
    "id": "d1e153aa",
    "metadata": {},
    "source": [
-    "# Automatic geometry"
+    "## Automatic geometry"
    ]
   },
   {
@@ -1666,7 +1666,7 @@
    "id": "756981df",
    "metadata": {},
    "source": [
-    "## For `Node`s"
+    "### For `Node`s"
    ]
   },
   {
@@ -1696,7 +1696,7 @@
    "id": "fa90149e",
    "metadata": {},
    "source": [
-    "### Anchors"
+    "#### Anchors"
    ]
   },
   {
@@ -1839,7 +1839,7 @@
    "id": "8c7904a0",
    "metadata": {},
    "source": [
-    "### Angles"
+    "#### Angles"
    ]
   },
   {
@@ -1964,7 +1964,7 @@
    "id": "ea66b483",
    "metadata": {},
    "source": [
-    "## For `Arc`s"
+    "### For `Arc`s"
    ]
   },
   {
